--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,15 @@ elseif (APPLE)
     message(STATUS "Using APPLE library")
 elseif (UNIX)
     message(STATUS "Using Linux library")
-    link_directories(lib/linux)
+    # 检查是否是树莓派桌面系统
+    execute_process(COMMAND uname -a OUTPUT_VARIABLE UNAME_RESULT)
+    string(FIND "${UNAME_RESULT}" "raspberrypi" RPI_FOUND)
+    if(RPI_FOUND GREATER -1)
+        message(STATUS "This is a Raspberry Pi system")
+        link_directories(lib/raspi)
+    else()
+        link_directories(lib/linux)
+    endif()
 endif()
 
 link_libraries(glfw3)
